# mapguard

./: README.md  pyproject.toml
mapguard/: __init__.py  analyzer.py  cli.py  models.py  npm_fetcher.py  remediation.py  reporter.py  risk.py  scanner.py
tests/: __init__.py  test_analyzer.py  test_models.py  test_remediation.py  test_reporter.py  test_risk.py  test_scanner.py
tests/fixtures/: ref_only.js.map  sample.js.map
