[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mapguard"
version = "0.1.0"
description = "CLI security tool that scans npm packages for accidentally included source map files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "mapguard contributors" }
]
keywords = ["security", "npm", "source-map", "cli", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.scripts]
mapguard = "mapguard.cli:main"

[project.urls]
Homepage = "https://github.com/example/mapguard"
Repository = "https://github.com/example/mapguard"
Issues = "https://github.com/example/mapguard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mapguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"
